完成天气功能.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name="com.rayweather.app.activity.WeatherActivity"
+            android:label="@string/app_name" >
+            
+        </activity>
     </application>
 
 </manifest>
